# GameEngineProject

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  Batch파일역할.txt  CMakeLists.txt  HazelGameEngine.sln  Makefile  README.md  premake5.lua  premake5_ Complete원본.lua  premake5_explain.txt  지워도됨.txt  추가적으로개선할사항.txt
240228 코드/: LvBVH.cpp  (+34 more)
ApplicationProject/src/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h  SandBox2D.cpp  SandBox2D.h  mainApp.cpp
BJEditor/src/: CMakeLists.txt  EditorLayer.cpp  HazelEditorApp.cpp  ParticleSystem.cpp  ParticleSystem.h
BJEditor/src/File/: FileManager.cpp  FileManager.h  PathManager.cpp
BJEditor/src/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp
BJEditor/src/Panel/ComponentPanel/: CameraPanel.cpp  CameraPanel.h
BJEditor/src/Panel/Utils/: PanelUtils.h
BJEditor/src/private/: Editor.cpp  EditorContext.cpp  EditorLayer.cpp  EditorSettings.cpp  HazelEditorApp.cpp  HazelGameEngine - 바로 가기.lnk  ParticleSystem.cpp  ProjectContext.cpp  ProjectSelectLayer.cpp
BJEditor/src/public/: Editor.h  EditorContext.cpp  EditorContext.h  EditorLayer.h  EditorSettings.h  IconsFontAwesome6.h  Project.h  ProjectContext.h  ProjectSelectLayer.h
BJGameEngine/src/: CMakeLists.txt  Hazel.h  hzpch.cpp  hzpch.h
BJGameEngine/src/private/Hazel/Asset/: Asset.txt  ResourceManager.cpp
BJGameEngine/src/private/Hazel/Asset/Image/: SubTexture2D.cpp  Texture.cpp
BJGameEngine/src/private/Hazel/Asset/Shader/: Shader.cpp
BJGameEngine/src/private/Hazel/Core/: Application.cpp  Engine.cpp  EngineContext.cpp  Window.cpp
BJGameEngine/src/private/Hazel/Core/Application/: Application.cpp  Window.cpp
BJGameEngine/src/private/Hazel/Core/GC/: GC.cpp  GCObject.cpp
BJGameEngine/src/private/Hazel/Core/ID/: UUID.cpp
BJGameEngine/src/private/Hazel/Core/Layer/: Layer.cpp  LayerStack.cpp
BJGameEngine/src/private/Hazel/Core/Memory/: CustomMemory.cpp
BJGameEngine/src/private/Hazel/Core/Object/: BaseObject.cpp  ObjectDB.cpp  ObjectPtr.cpp
BJGameEngine/src/private/Hazel/Core/Reflection/: TypeUtils.cpp  VariableId.cpp
BJGameEngine/src/private/Hazel/Core/Serialization/: Serializer.cpp  Stream.cpp
BJGameEngine/src/private/Hazel/ImGui/: ImGuiContextManager.cpp  ImGuiLayer.cpp  ImGuilBuild.cpp
BJGameEngine/src/private/Hazel/Math/: Math.cpp
BJGameEngine/src/private/Hazel/Resource/: AssetManagerBase.cpp  DefaultResourceManager.cpp  ResourceContainer.cpp
BJGameEngine/src/private/Hazel/Resource/Font/: Font.cpp
BJGameEngine/src/private/Hazel/Resource/Image/: SubTexture2D.cpp  Texture.cpp
BJGameEngine/src/private/Hazel/Resource/Shader/: Shader.cpp
BJGameEngine/src/private/Hazel/Scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp  ScriptableEntity.cpp
BJGameEngine/src/private/Hazel/Utils/: EngineUtil.cpp  Log.cpp  Random.cpp  SpookyHash.cpp  StringUtil.cpp  TimeUtil.cpp
BJGameEngine/src/private/Network/NetLib/: Server.cpp  TcpNetwork.cpp
BJGameEngine/src/private/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp
BJGameEngine/src/private/Platform/Windows/: WindowPlatformUtil.cpp  WindowsInput.cpp  WindowsWindow.cpp
BJGameEngine/src/private/Renderer/: RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  VertexArray.cpp
BJGameEngine/src/private/Renderer/Buffer/: Buffer.cpp  FrameBuffer.cpp  UniformBuffer.cpp  VertexArray.cpp
BJGameEngine/src/private/Renderer/Camera/: Camera.cpp  EditorCamera.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp
BJGameEngine/src/public/Hazel/Asset/: ResourceManager.h
BJGameEngine/src/public/Hazel/Core/: Application.h  Core.h  Engine.h  EngineContext.h  EntryPoint.h
BJGameEngine/src/public/Hazel/Debug/: Instrumentor.h
BJGameEngine/src/public/Hazel/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
BJGameEngine/src/public/Hazel/FileSystem/: DirectorySystem.h  FileMemory.h  FileModes.h  FileStream.h
BJGameEngine/src/public/Hazel/ImGui/: ImGuiContextManager.h  ImGuiLayer.h
BJGameEngine/src/public/Hazel/Input/: Input.h  KeyCodes.h  MouseButtonCodes.h
BJGameEngine/src/public/Hazel/Math/: Math.h
BJGameEngine/src/public/Hazel/Resource/: AssetManagerBase.h  DefaultResourceManager.h  ResourceContainer.h
BJGameEngine/src/public/Hazel/Scene/: Entity.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
BJGameEngine/src/public/Hazel/Utils/: Encoder.h  EngineUtil.h  FunctorInvoker.h  Log.h  MetaProgrammingInfo.h  PlatformUtils.h  Random.h  SpookyHash.h  StringUtil.h  ThreadVars.h  TimeStep.h  TimeUtil.h
BJGameEngine/src/public/Network/Common/: ConsoleLogger.h
BJGameEngine/src/public/Network/NetLib/: Server.h
BJGameEngine/src/public/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLFrameBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h
BJGameEngine/src/public/Platform/Windows/: WindowPlatformUtil.h  WindowsWindow.h
BJGameEngine/src/public/Renderer/: GraphicsContext.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  VertexArray.h
BJGameEngine/src/public/Renderer/Buffer/: Buffer.h  FrameBuffer.h  UniformBuffer.h  VertexArray.h
BJGameEngine/src/public/Renderer/Camera/: Camera.h  EditorCamera.h  OrthographicCamera.h  OrthographicCameraController.h
IMGUIChat/src/: CMakeLists.txt  ServerInfo.h  mainApp.cpp
IMGUIChat/src/Layer/: ChatClientLayer.cpp  ChatClientLayer.h  ChatLayer.cpp  ChatLayer.h  ChatServerLayer.cpp  ChatServerLayer.h  EchoTCPClientLayer.cpp  EchoTCPClientLayer.h  EchoTCPServerLayer.cpp  EchoTCPServerLayer.h  EchoUDPClientLayer.cpp  EchoUDPClientLayer.h  EchoUDPServerLayer.cpp  EchoUDPServerLayer.h  MultiCastReceiverLayer.cpp  MultiCastReceiverLayer.h  MultiCastSenderLayer.cpp  MultiCastSenderLayer.h  OverlappedClientLayer.cpp  OverlappedClientLayer.h  OverlappedServerLayer.cpp  OverlappedServerLayer.h
IMGUIChat/src/Util/: NetworkManager.cpp  NetworkManager.h  Util.cpp  Util.h
(+369 files in other folders)
